// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de Componente <GridGif/> Debe hace to matchSnapshot 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__fadeIn"
  >
     
    Terror
  </h2>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Prueba de Componente <GridGif/> Simular que haya cargados imagenes useGetImagenes 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__fadeIn"
  >
     
    Terror
  </h2>
  <p
    className="animate__animated animate__flash"
  >
    Cargado!!!
  </p>
  <div
    className="card-grid"
  >
    <ItemGifGrit
      id="123"
      key="123"
      title="Titulo de la IMG"
      url="https://localhost/img/foto.jpg"
    />
    <ItemGifGrit
      id="ACB"
      key="ACB"
      title="Titulo de la AB"
      url="https://localhost/img/foto2.jpg"
    />
  </div>
</Fragment>
`;
